# OldIron

./: .gitignore  AGENTS.md  README.md  product.py  tmp_markdown_demo.md
.claude/: settings.json
former/Japan/: AGENTS.md  product.py  pyproject.toml  requirements.txt
former/Japan/docs/: PRD.md
former/Japan/docs/prefectures/: 三重县.txt  东京都.txt  京都府.txt  兵库县.txt  冈山县.txt  北海道.txt  千叶县.txt  和歌山县.txt  大分县.txt  大阪府.txt  富山县.txt  山形县.txt  岛根县.txt  岩手县.txt  新潟县.txt  栃木县.txt  爱媛县.txt  福井县.txt  福冈县.txt  福岛县.txt  秋田县.txt  群马县.txt  茨城县.txt  长崎县.txt  长野县.txt  鸟取县.txt  鹿儿岛县.txt
former/Japan/snov_ext/_locales/de/: messages.json
former/Japan/snov_ext/_locales/en/: messages.json
former/Japan/snov_ext/_locales/fr/: messages.json
former/Japan/snov_ext/_locales/it/: messages.json
former/Japan/snov_ext/_locales/pl/: messages.json
former/Japan/snov_ext/_locales/pt_BR/: messages.json
former/Japan/snov_ext/_locales/uk/: messages.json
former/Japan/snov_ext/_metadata/: verified_contents.json
former/Japan/snov_ext/js/: CheckAuth.js  popupHtml.js  sw.js
former/Japan/snov_ext/js/background/: blackFridayPromotion.js  googleAnalyticsEvents.js  newsChecker.js
former/Japan/snov_ext/js/common/: commonHtml.js  userLists.js
former/Japan/snov_ext/js/emptyPages/: emptyPages.js
former/Japan/snov_ext/js/snovio/: snovioEvents.js
former/Japan/snov_ext/js/twitter/: twitter.js
former/Japan/src/corp_agent/: __init__.py
former/Japan/test/integration/: test_tokyo_sample_run.py
former/Japan/test/web_agent/: test_prefecture_matching.py  test_web_agent_status_logic.py
(+988 files in other folders)
