[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "official-site-agent"
version = "0.1.0"
description = "Official site info extractor (Firecrawl + rules/Snov + LLM link selection)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.109.0",
  "requests>=2.32.0",
  "pdfminer.six>=20231228",
  "playwright>=1.42.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
site_agent = ["prompts/*.txt"]

